[tool.poetry]
name = "memory-tempfile"
version = "2.2.3"
description = "Helper functions to identify and use paths on the OS (Linux-only for now) where RAM-based tempfiles can be created."
authors = ["mbello <mbello@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mbello/memory-tempfile"
homepage = "https://github.com/mbello/memory-tempfile"
keywords = ['tempfile in RAM', 'tempfile in memory', 'file in memory', 'tempfs', 'ramdisk', '/dev/shm', '/run/user']


[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.3.3"
pytest-benchmark = "^3.2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
